[package]
name = "pensionmint-server"
version = "0.1.0"
authors = ["The Bitpension Developers"]
edition = "2023"
description = "Pensionmint is a fedimint module to enable retirements account on any federation."
license = "MIT"

[lib]
name = "pensionmint_server"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1"
bitcoin_hashes = "0.11.0"
erased-serde = "0.3"
futures = "0.3"
pensionmint-core = { workspace = true }
pensionmint-common = { path = "../pensionmint-common" }
rand = "0.8"
serde = { version = "1.0.149", features = [ "derive" ] }
secp256k1 = "0.24.2"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0.39"
pensionmint-server = { workspace = true }
tracing = "0.1.37"
threshold_crypto = { workspace = true }
tokio = { version = "1.26.0", features = ["sync"] }